undid conflicting changes, can redo

--- a/templates/content.html
+++ b/templates/content.html
@@ -40,7 +40,7 @@
             <div style="width:auto"></div>
 
             <div class="card ms-5 mt-4" style="width: 275px;">
-                <img class="card-img-top" src="{{url_for('static', filename='chandos_logo.png')}}" alt="Company Logo" style="card-image-top">
+                <img class="card-img-top" src="chandos_logo.png" alt="Company Logo" style="card-image-top">
                 <div class="card-body">
                     <h3 class="card-title">Chandos Construction</h3>
                 </div>
@@ -59,7 +59,7 @@
             <div style="width:auto"></div>
 
             <div class="card ms-5 mt-4" style="width: 275px; padding-top: 1%;">
-                <img class="card-img-top" src="{{url_for('static', filename='python_logo.png')}}" alt="Python Logo" style="width: 200px; padding-left: 20%;">
+                <img class="card-img-top" src="python_logo.png" alt="Python Logo" style="width: 200px; padding-left: 20%;">
                 <div class="card-body">
                     <h3 class="card-title">Technologies Used</h3>
                 </div>
@@ -102,7 +102,7 @@
 
             
             <div class="card ms-4 mt-4 me-5" style="width: 55%; padding-top: 1%;">
-                <img class="rounded" src="{{url_for('static', filename='square_image.jpg')}}" alt="Image of site" style="width: 100%">
+                <img class="rounded" src="square_image.jpg" alt="Image of site" style="width: 100%">
                 <div class="card-body">
                     <h3 class="card-title">Site Mock-up</h3>
                 </div>
