--- a/templates/content.html
+++ b/templates/content.html
@@ -39,7 +39,7 @@
         <div class="row">
 
             <div class="card" style="width: 18%; margin-top: 2%; margin-left: 2.25%; border-radius: 20px;">
-                <img class="card-img-top" src="chandos_logo.png" alt="Company Logo" style="width: 90%; display: block; margin-left: auto; margin-right: auto">
+                <img class="card-img-top" src="{{url_for('static', filename='chandos_logo.png')}}" alt="Company Logo" style="width: 90%; display: block; margin-left: auto; margin-right: auto">
                 <div class="card-body">
                     <h3 class="card-title">Chandos Construction</h3>
                 </div>
@@ -55,7 +55,7 @@
         <div class="row"> <!--Second row, testing scrolling-->
 
             <div class="card" style="width: 18%; margin-top: 2%; margin-left: 2.25%; padding-top: 3%; border-radius: 20px;">
-                <img src="python_logo.png" alt="Python Logo" style="width: 65%; display: block; margin-left: auto; margin-right: auto; padding-bottom: 8%;">
+                <img src="{{url_for('static', filename='python_logo.png')}}" alt="Python Logo" style="width: 65%; display: block; margin-left: auto; margin-right: auto; padding-bottom: 8%;">
                 <div class="card-body">
                     <h3 class="card-title">Technologies Used</h3>
                 </div>
@@ -96,7 +96,7 @@
 
             
             <div class="card ms-4 mt-4 me-5" style="width: 55%; padding-top: 1%; height: auto; border-radius: 20px;;">
-                <img src="square_image.jpg" alt="Image of site" style="width: 99%; display: block; margin-left: auto; margin-right: auto; border-radius: 12px;">
+                <img src="{{url_for('static', filename='square_image.jpg')}}" alt="Image of site" style="width: 99%; display: block; margin-left: auto; margin-right: auto; border-radius: 12px;">
                 <div class="card-body">
                     <h3 class="card-title">Site Mock-up</h3>
                 </div>
