--- a/templates/content.html
+++ b/templates/content.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="#intro">Introduction</a></li>
                     <li class="nav-item"><a class="nav-link" href="#job-description">Job Description</a></li>
                     <li class="nav-item"><a class="nav-link" href="#learning-goals">Learning Goals</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#overall-reflection">Reflection</a></li>
                 </ul>
 
             </div>
@@ -33,7 +34,7 @@
 
         <div class="mt-4 p-5 bg-black text-white" id="intro">
             <h1>Summer 2024 Work Term Report</h1> <!-- Want to make some kind of big banner/jumbotron, either image or colours-->
-            <h5>Student Project Coordinator</h5>
+            <h5>Talha Malik - Student Project Coordinator</h5>
         </div>
 
         <div class="row">
@@ -50,7 +51,7 @@
         
                     <div class="card" style="width: 71.5%; margin-top: 2%; margin-left: auto; margin-right: 2.25%; border-radius: 20px;">
                         <div class="card-body">
-                            <h4>- <a href="https://www.chandos.com/">Chandos Construction</a> is a Canadian General Contracting company, constantly tackling large new projects nationwide. <br><br> - I was hired in order to help the Project Management team streamline the operations of a project in its final stages. <br><br>- The founders named the company after <a href="https://en.wikipedia.org/wiki/Chandos_Lake">Chandos Lake,</a> - a body of water belonging to Ontario's Kawartha Highlands - a place that had a history in both of their upbringings. </h4>
+                            <h4><a href="https://www.chandos.com/">Chandos Construction</a> is a Canadian General Contracting company, constantly tackling large new projects nationwide. <br><br>I was hired in order to help the Project Management team streamline the operations of a project in its final stages. <br><br>The founders named the company after <a href="https://en.wikipedia.org/wiki/Chandos_Lake">Chandos Lake,</a> - a body of water belonging to Ontario's Kawartha Highlands - a place that had a history in both of their upbringings. </h4>
                         </div>
                     </div>
         
@@ -297,6 +298,25 @@
             </div>
         </div>
 
+
+        <div style="margin-bottom: 5%;"></div>
+        <!--Goals subheading-->
+        <div id="overall-reflection" class="mt-4 p-5 text-white" style="width: 97%; margin: auto; background-color:rgb(105, 0, 151); border-radius: 20px;"> <!--Styling doesn't work, use actual CSS at top of file-->
+            <h2>Overall Reflection</h2>
+        </div>
+
+        <div id="end-row" class="row" style="margin-top: 3%;">
+            <div class="card" style="width: 49%; border-radius: 20px; margin-left: 2.5%; margin-right: auto; height: auto; overflow: hidden;">
+                <div class="card-body">
+                    <h6 style="line-height: 175%;">If I were to sum up my entire experience with Chandos up to this point, I would say that I have tried my best to maximise my career development in a non-ideal job. When I initially accepted this position, I felt like I had already wasted an entire Co-op term by not getting the sort of technical role I was looking for. Although for the first few weeks this remained true, I eventually became more motivated to try and develop myself as much as I could within the limits of the job. As soon as I started working on my numerous mini-projects, I enjoyed my work significantly more and was praised by my superiors for my technical skills. While I worked on these projects I learned how to use a multitude of new software libraries and gained even more experience testing code. I even started new personal projects outside of work as my set of skills and interests grew, with an example being how working with Pandas piqued my interest in ML, prompting me to learn PyTorch. Aside from technical skills, I did gain valuable communication and professional correspondence skills. Although not as marketable or personally interesting as being hands-on with areas of Computer Science, these are skills that will stay with me moving forward in my career and are helpful in all areas of life. I also gained connections with my superiors and left a very positive impression on them, resulting in a grade of Outstanding on my final performance evaluation and serving as another incentive for future employers when considering me. Although I do not plan to continue in construction after this year, I appreciate the value of having connections who would provide a very positive reference for future opportunities elsewhere. In the coming Fall 2024 Co-op term, I am continuing with Chandos and I will try my best to continue the momentum that I found midway through this term. I will continue to work on technical projects to improve my breadth of understanding at work and away from work, and will set myself up as well as I can for the Summer 2025 Co-op term.</h6>
+                </div>
+            </div>
+
+            <div class="card" style="width: 44%; margin-right: 2.5%; border-radius: 20px; height: auto;">
+                <img src="{{url_for('static', filename='University of Guelph.svg')}}" style=" display: block; margin-top: auto; margin-bottom: auto;">
+            </div>
+        </div>
+
               
         <script>
             // Function to equalize card heights
@@ -323,6 +343,7 @@
                 equalizeCardHeights('goal-3');
                 equalizeCardHeights('goal-4');
                 equalizeCardHeights('goal-5');
+                // equalizeCardHeights('end-row');
             });
         </script>
 
